--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
 *{
     background-color: aquamarine;
 }
+h1{
+    text-align: center;
+    color: red;
+    font-size: 50px;
+}
+h2{
+   color: navy;
+   font-size: 28px;
+}
+*{
+   text-align: justify; 
+   font-size: 18px;
+   margin: 10px;
+}
+table{
+    border: 2px solid tomato;
+    border-radius: 8px;
+    padding: 2px;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  border: 3px solid navy;
+  border-radius: 10px;
+}
+
+ul {
+  list-style-type: square;
+  padding-left: 40px;
+}
+
+button {
+  background-color: green;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
